# static-site-generator

./: pyproject.toml
src/: htmlnode.py  leafnode.py  test_htmlnode.py  test_leafnode.py  test_textnode.py  textnode.py
